[package]
name = "rsbf"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[lib]
name = "rsbflib"
path = "src/lib/lib.rs"

[[bin]]
name = "rsbfc"
path = "src/compiler/main.rs"

[[bin]]
name = "rsbfi"
path = "src/interpreter/main.rs"

[dependencies]
bimap = "0.6.3"
clap = { version = "3.2.11", features = ["derive"] }
nohash-hasher = "0.2.0"
subprocess = "0.2.9"
