[package]
name = "rsbf"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[lib]
name = "rsbflib"
path = "src/lib/lib.rs"

[[bin]]
name = "rsbfc"
path = "src/compiler/main.rs"

[[bin]]
name = "rsbfi"
path = "src/interpreter/main.rs"

[features]
default = ["jit", "cranelift-compile"]
jit = ["codegen", "dep:memmap2"]
cranelift-compile = ["codegen", "dep:cranelift-object", "dep:cranelift-module"]
codegen = ["dep:cranelift", "dep:target-lexicon"]

[dependencies]
clap = { version = "3.2.11", features = ["derive"] }
cranelift = { version = "0.100.0", optional = true }
cranelift-module = { version = "0.100.0", optional = true }
cranelift-object = { version = "0.100.0", optional = true }
memmap2 = { version = "0.9.0", optional = true }
nohash-hasher = "0.2.0"
subprocess = "0.2.9"
target-lexicon = { version = "0.12.11", optional = true }
